# crawlers

./: README.md  pyproject.toml
tendercrawler/: README.md  scrapy.cfg
tendercrawler/tendercrawler/: items.py  middlewares.py  pipelines.py  settings.py
tendercrawler/tendercrawler/spiders/: functions.py  tenderspider.py
