[tool.poetry]
name = "tenderboard"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scrapy = "^2.11.2"
scrapy-zyte-api = "^0.21.0"
ipython = "^8.26.0"
scrapy-seleniumbase = {git = "https://github.com/Quartz-Core/scrapy-seleniumbase"}
seleniumbase = "^4.28.5"
scrapy-fake-useragent = "^1.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
